--- a/eshopView/my-app/src/app/app.component.html
+++ b/eshopView/my-app/src/app/app.component.html
@@ -268,7 +268,7 @@
     <div class="navbar-buttons">
 
       <div class="navbar-collapse collapse right" id="basket-overview">
-        <a routerLink="/basket" routerLinkActive="active" class="btn btn-primary navbar-btn"><i class="fa fa-shopping-cart"></i><span class="hidden-sm">3
+        <a routerLink="/cart" routerLinkActive="active" class="btn btn-primary navbar-btn"><i class="fa fa-shopping-cart"></i><span class="hidden-sm">3
             items in cart</span></a>
       </div>
       <!--/.nav-collapse -->
@@ -315,7 +315,7 @@
 
   <!-- *** FOOTER ***
 _________________________________________________________ -->
-  <div id="footer" data-animate="fadeInUp" style="opacity: 0;">
+  <div id="footer" data-animate="fadeInUp" style="opacity: 1;">
     <div class="container">
       <div class="row">
         <div class="col-md-3 col-sm-6">
