--- a/eshopView/my-app/src/app/home/home.component.html
+++ b/eshopView/my-app/src/app/home/home.component.html
@@ -19,20 +19,21 @@ _________________________________________________________ -->
 
           <div class="panel-body">
               <ul class="nav nav-pills nav-stacked category-menu">
-                  <li>
-                      <a href="category.html">Men <span class="badge pull-right">42</span></a>
+                  <li *ngFor = "let c of cateroies">
+                      <a (click)="selectCategory(c)">{{c.name}}<span class="badge pull-right">42</span></a>
                       <ul>
-                          <li><a href="category.html">T-shirts</a>
+                          <li *ngFor = "let sc of c.subCateroies">
+                              <a (click)="selectSubCategory(c)">{{sc.name}}</a>
                           </li>
-                          <li><a href="category.html">Shirts</a>
+                          <!-- <li><a href="category.html">Shirts</a>
                           </li>
                           <li><a href="category.html">Pants</a>
                           </li>
                           <li><a href="category.html">Accessories</a>
-                          </li>
+                          </li> -->
                       </ul>
                   </li>
-                  <li class="active">
+                  <!-- <li class="active">
                       <a href="category.html">Ladies  <span class="badge pull-right">123</span></a>
                       <ul>
                           <li><a href="category.html">T-shirts</a>
@@ -57,7 +58,7 @@ _________________________________________________________ -->
                           <li><a href="category.html">Accessories</a>
                           </li>
                       </ul>
-                  </li>
+                  </li> -->
 
               </ul>
 
@@ -74,12 +75,12 @@ _________________________________________________________ -->
 
               <form>
                   <div class="form-group">
-                      <div class="checkbox">
+                      <div class="checkbox" *ngFor ="let td of trademark">
                           <label>
-                              <input type="checkbox">Armani (10)
+                              <input type="checkbox">{{td.name}} (10)
                           </label>
                       </div>
-                      <div class="checkbox">
+                      <!-- <div class="checkbox">
                           <label>
                               <input type="checkbox">Versace (12)
                           </label>
@@ -93,7 +94,7 @@ _________________________________________________________ -->
                           <label>
                               <input type="checkbox">Jack Honey (14)
                           </label>
-                      </div>
+                      </div> -->
                   </div>
 
                   <button class="btn btn-default btn-sm btn-primary"><i class="fa fa-pencil"></i> Apply</button>
@@ -103,7 +104,7 @@ _________________________________________________________ -->
           </div>
       </div>
 
-      <div class="panel panel-default sidebar-menu">
+      <div  class="panel panel-default sidebar-menu">
 
           <div class="panel-heading">
               <h3 class="panel-title">Colours <a class="btn btn-xs btn-danger pull-right" href="#"><i class="fa fa-times-circle"></i> Clear</a></h3>
@@ -146,7 +147,49 @@ _________________________________________________________ -->
 
           </div>
       </div>
+      <div class="panel panel-default sidebar-menu">
 
+            <div class="panel-heading">
+                <h3 class="panel-title">Colours <a class="btn btn-xs btn-danger pull-right" href="#"><i class="fa fa-times-circle"></i> Clear</a></h3>
+            </div>
+  
+            <div class="panel-body">
+  
+                <form>
+                    <div class="form-group">
+                        <div class="checkbox">
+                            <label>
+                                <input type="checkbox"> <span class="colour white"></span> White (14)
+                            </label>
+                        </div>
+                        <div class="checkbox">
+                            <label>
+                                <input type="checkbox"> <span class="colour blue"></span> Blue (10)
+                            </label>
+                        </div>
+                        <div class="checkbox">
+                            <label>
+                                <input type="checkbox"> <span class="colour green"></span> Green (20)
+                            </label>
+                        </div>
+                        <div class="checkbox">
+                            <label>
+                                <input type="checkbox"> <span class="colour yellow"></span> Yellow (13)
+                            </label>
+                        </div>
+                        <div class="checkbox">
+                            <label>
+                                <input type="checkbox"> <span class="colour red"></span> Red (10)
+                            </label>
+                        </div>
+                    </div>
+  
+                    <button class="btn btn-default btn-sm btn-primary"><i class="fa fa-pencil"></i> Apply</button>
+  
+                </form>
+  
+            </div>
+        </div>
       <!-- *** MENUS AND FILTERS END *** -->
 
       <div class="banner">
