--- a/eshopView/my-app/src/app/home/home.component.html
+++ b/eshopView/my-app/src/app/home/home.component.html
@@ -107,36 +107,15 @@ _________________________________________________________ -->
       <div  class="panel panel-default sidebar-menu">
 
           <div class="panel-heading">
-              <h3 class="panel-title">Colours <a class="btn btn-xs btn-danger pull-right" href="#"><i class="fa fa-times-circle"></i> Clear</a></h3>
+              <h3 class="panel-title">Size<a class="btn btn-xs btn-danger pull-right" href="#"><i class="fa fa-times-circle"></i> Clear</a></h3>
           </div>
 
           <div class="panel-body">
-
               <form>
-                  <div class="form-group">
+                  <div class="form-group" *ngFor = "let s of size">
                       <div class="checkbox">
                           <label>
-                              <input type="checkbox"> <span class="colour white"></span> White (14)
-                          </label>
-                      </div>
-                      <div class="checkbox">
-                          <label>
-                              <input type="checkbox"> <span class="colour blue"></span> Blue (10)
-                          </label>
-                      </div>
-                      <div class="checkbox">
-                          <label>
-                              <input type="checkbox"> <span class="colour green"></span> Green (20)
-                          </label>
-                      </div>
-                      <div class="checkbox">
-                          <label>
-                              <input type="checkbox"> <span class="colour yellow"></span> Yellow (13)
-                          </label>
-                      </div>
-                      <div class="checkbox">
-                          <label>
-                              <input type="checkbox"> <span class="colour red"></span> Red (10)
+                              <input type="checkbox"> {{s.sizeName}} (14)
                           </label>
                       </div>
                   </div>
@@ -236,230 +215,34 @@ _________________________________________________________ -->
       </div>
 
       <div class="row products">
-
-          <div class="col-md-4 col-sm-6">
+          <div class="col-md-4 col-sm-6" *ngFor = "let item of products">
               <div class="product">
                   <div class="flip-container">
                       <div class="flipper">
                           <div class="front">
                               <a href="detail.html">
-                                  <img src="../assets/img/product1.jpg" alt="" class="img-responsive">
+                                  <img [src]="item.imageBase64" alt="" class="img-responsive">
                               </a>
                           </div>
                           <div class="back">
                               <a href="detail.html">
-                                  <img src="../assets/img/product1_2.jpg" alt="" class="img-responsive">
+                                  <img [src]="item.imageBase64" alt="" class="img-responsive">
                               </a>
                           </div>
                       </div>
                   </div>
                   <a href="detail.html" class="invisible">
-                      <img src="../assets/img/product1.jpg" alt="" class="img-responsive">
+                      <img [src]="item.imageBase64" alt="" class="img-responsive">
                   </a>
                   <div class="text">
-                      <h3><a href="detail.html">Fur coat with very but very very long name</a></h3>
-                      <p class="price">$143.00</p>
+                      <h3><a href="detail.html">{{ item.name }}</a></h3>
+                      <p class="price">${{item.price}}</p>
                       <p class="buttons">
                           <a href="detail.html" class="btn btn-default">View detail</a>
                           <a href="basket.html" class="btn btn-primary"><i class="fa fa-shopping-cart"></i>Add to cart</a>
                       </p>
                   </div>
                   <!-- /.text -->
-              </div>
-              <!-- /.product -->
-          </div>
-
-          <div class="col-md-4 col-sm-6">
-              <div class="product">
-                  <div class="flip-container">
-                      <div class="flipper">
-                          <div class="front">
-                              <a href="detail.html">
-                                  <img src="../assets/img/product2.jpg" alt="" class="img-responsive">
-                              </a>
-                          </div>
-                          <div class="back">
-                              <a href="detail.html">
-                                  <img src="../assets/img/product2_2.jpg" alt="" class="img-responsive">
-                              </a>
-                          </div>
-                      </div>
-                  </div>
-                  <a href="detail.html" class="invisible">
-                      <img src="../assets/img/product2.jpg" alt="" class="img-responsive">
-                  </a>
-                  <div class="text">
-                      <h3><a href="detail.html">White Blouse Armani</a></h3>
-                      <p class="price"><del>$280</del> $143.00</p>
-                      <p class="buttons">
-                          <a href="detail.html" class="btn btn-default">View detail</a>
-                          <a href="basket.html" class="btn btn-primary"><i class="fa fa-shopping-cart"></i>Add to cart</a>
-                      </p>
-                  </div>
-                  <!-- /.text -->
-
-                  <div class="ribbon sale">
-                      <div class="theribbon">SALE</div>
-                      <div class="ribbon-background"></div>
-                  </div>
-                  <!-- /.ribbon -->
-
-                  <div class="ribbon new">
-                      <div class="theribbon">NEW</div>
-                      <div class="ribbon-background"></div>
-                  </div>
-                  <!-- /.ribbon -->
-
-                  <div class="ribbon gift">
-                      <div class="theribbon">GIFT</div>
-                      <div class="ribbon-background"></div>
-                  </div>
-                  <!-- /.ribbon -->
-              </div>
-              <!-- /.product -->
-          </div>
-
-          <div class="col-md-4 col-sm-6">
-              <div class="product">
-                  <div class="flip-container">
-                      <div class="flipper">
-                          <div class="front">
-                              <a href="detail.html">
-                                  <img src="../assets/img/product3.jpg" alt="" class="img-responsive">
-                              </a>
-                          </div>
-                          <div class="back">
-                              <a href="detail.html">
-                                  <img src="../assets/img/product3_2.jpg" alt="" class="img-responsive">
-                              </a>
-                          </div>
-                      </div>
-                  </div>
-                  <a href="detail.html" class="invisible">
-                      <img src="../assets/img/product3.jpg" alt="" class="img-responsive">
-                  </a>
-                  <div class="text">
-                      <h3><a href="detail.html">Black Blouse Versace</a></h3>
-                      <p class="price">$143.00</p>
-                      <p class="buttons">
-                          <a href="detail.html" class="btn btn-default">View detail</a>
-                          <a href="basket.html" class="btn btn-primary"><i class="fa fa-shopping-cart"></i>Add to cart</a>
-                      </p>
-
-                  </div>
-                  <!-- /.text -->
-              </div>
-              <!-- /.product -->
-          </div>
-
-          <div class="col-md-4 col-sm-6">
-              <div class="product">
-                  <div class="flip-container">
-                      <div class="flipper">
-                          <div class="front">
-                              <a href="detail.html">
-                                  <img src="../assets/img/product3.jpg" alt="" class="img-responsive">
-                              </a>
-                          </div>
-                          <div class="back">
-                              <a href="detail.html">
-                                  <img src="../assets/img/product3_2.jpg" alt="" class="img-responsive">
-                              </a>
-                          </div>
-                      </div>
-                  </div>
-                  <a href="detail.html" class="invisible">
-                      <img src="../assets/img/product3.jpg" alt="" class="img-responsive">
-                  </a>
-                  <div class="text">
-                      <h3><a href="detail.html">Black Blouse Versace</a></h3>
-                      <p class="price">$143.00</p>
-                      <p class="buttons">
-                          <a href="detail.html" class="btn btn-default">View detail</a>
-                          <a href="basket.html" class="btn btn-primary"><i class="fa fa-shopping-cart"></i>Add to cart</a>
-                      </p>
-
-                  </div>
-                  <!-- /.text -->
-              </div>
-              <!-- /.product -->
-          </div>
-
-          <div class="col-md-4 col-sm-6">
-              <div class="product">
-                  <div class="flip-container">
-                      <div class="flipper">
-                          <div class="front">
-                              <a href="detail.html">
-                                  <img src="../assets/img/product2.jpg" alt="" class="img-responsive">
-                              </a>
-                          </div>
-                          <div class="back">
-                              <a href="detail.html">
-                                  <img src="../assets/img/product2_2.jpg" alt="" class="img-responsive">
-                              </a>
-                          </div>
-                      </div>
-                  </div>
-                  <a href="detail.html" class="invisible">
-                      <img src="../assets/img/product2.jpg" alt="" class="img-responsive">
-                  </a>
-                  <div class="text">
-                      <h3><a href="detail.html">White Blouse Versace</a></h3>
-                      <p class="price">$143.00</p>
-                      <p class="buttons">
-                          <a href="detail.html" class="btn btn-default">View detail</a>
-                          <a href="basket.html" class="btn btn-primary"><i class="fa fa-shopping-cart"></i>Add to cart</a>
-                      </p>
-
-                  </div>
-                  <!-- /.text -->
-
-                  <div class="ribbon new">
-                      <div class="theribbon">NEW</div>
-                      <div class="ribbon-background"></div>
-                  </div>
-                  <!-- /.ribbon -->
-              </div>
-              <!-- /.product -->
-          </div>
-
-          <div class="col-md-4 col-sm-6">
-              <div class="product">
-                  <div class="flip-container">
-                      <div class="flipper">
-                          <div class="front">
-                              <a href="detail.html">
-                                  <img src="../assets/img/product1.jpg" alt="" class="img-responsive">
-                              </a>
-                          </div>
-                          <div class="back">
-                              <a href="detail.html">
-                                  <img src="../assets/img/product1_2.jpg" alt="" class="img-responsive">
-                              </a>
-                          </div>
-                      </div>
-                  </div>
-                  <a href="detail.html" class="invisible">
-                      <img src="../assets/img/product1.jpg" alt="" class="img-responsive">
-                  </a>
-                  <div class="text">
-                      <h3><a href="detail.html">Fur coat</a></h3>
-                      <p class="price">$143.00</p>
-                      <p class="buttons">
-                          <a href="detail.html" class="btn btn-default">View detail</a>
-                          <a href="basket.html" class="btn btn-primary"><i class="fa fa-shopping-cart"></i>Add to cart</a>
-                      </p>
-
-                  </div>
-                  <!-- /.text -->
-
-                  <div class="ribbon gift">
-                      <div class="theribbon">GIFT</div>
-                      <div class="ribbon-background"></div>
-                  </div>
-                  <!-- /.ribbon -->
-
               </div>
               <!-- /.product -->
           </div>
