--- a/eshopView/my-app/src/app/home/home.component.html
+++ b/eshopView/my-app/src/app/home/home.component.html
@@ -1,39 +1,39 @@
 <div class="container">
 
-  <div class="col-md-12">
-      <ul class="breadcrumb">
-          <li><a href="#">Home</a>
-          </li>
-          <li>Ladies</li>
-      </ul>
-  </div>
+    <div class="col-md-12">
+        <ul class="breadcrumb">
+            <li><a href="#">Home</a>
+            </li>
+            <li>Ladies</li>
+        </ul>
+    </div>
 
-  <div class="col-md-3">
-      <!-- *** MENUS AND FILTERS ***
+    <div class="col-md-3">
+        <!-- *** MENUS AND FILTERS ***
 _________________________________________________________ -->
-      <div class="panel panel-default sidebar-menu">
+        <div class="panel panel-default sidebar-menu">
 
-          <div class="panel-heading">
-              <h3 class="panel-title">Categories</h3>
-          </div>
+            <div class="panel-heading">
+                <h3 class="panel-title">Categories</h3>
+            </div>
 
-          <div class="panel-body">
-              <ul class="nav nav-pills nav-stacked category-menu">
-                  <li *ngFor = "let c of cateroies">
-                      <a (click)="selectCategory(c)">{{c.name}}<span class="badge pull-right">42</span></a>
-                      <ul>
+            <div class="panel-body">
+                <ul class="nav nav-pills nav-stacked category-menu">
+                    <li *ngFor="let c of cateroies">
+                        <a (click)="selectCategory(c)">{{c.name}}<span class="badge pull-right">42</span></a>
+                        <!-- <ul>
                           <li *ngFor = "let sc of c.subCateroies">
                               <a (click)="selectSubCategory(c)">{{sc.name}}</a>
-                          </li>
-                          <!-- <li><a href="category.html">Shirts</a>
+                          </li> -->
+                        <!-- <li><a href="category.html">Shirts</a>
                           </li>
                           <li><a href="category.html">Pants</a>
                           </li>
                           <li><a href="category.html">Accessories</a>
                           </li> -->
-                      </ul>
-                  </li>
-                  <!-- <li class="active">
+                        <!-- </ul> -->
+                    </li>
+                    <!-- <li class="active">
                       <a href="category.html">Ladies  <span class="badge pull-right">123</span></a>
                       <ul>
                           <li><a href="category.html">T-shirts</a>
@@ -60,222 +60,216 @@ _________________________________________________________ -->
                       </ul>
                   </li> -->
 
-              </ul>
+                </ul>
 
-          </div>
-      </div>
-
-      <div class="panel panel-default sidebar-menu">
-
-          <div class="panel-heading">
-              <h3 class="panel-title">Brands <a class="btn btn-xs btn-danger pull-right" href="#"><i class="fa fa-times-circle"></i> Clear</a></h3>
-          </div>
-
-          <div class="panel-body">
-
-              <form>
-                  <div class="form-group">
-                      <div class="checkbox" *ngFor ="let td of trademark">
-                          <label>
-                              <input type="checkbox">{{td.name}} (10)
-                          </label>
-                      </div>
-                      <!-- <div class="checkbox">
-                          <label>
-                              <input type="checkbox">Versace (12)
-                          </label>
-                      </div>
-                      <div class="checkbox">
-                          <label>
-                              <input type="checkbox">Carlo Bruni (15)
-                          </label>
-                      </div>
-                      <div class="checkbox">
-                          <label>
-                              <input type="checkbox">Jack Honey (14)
-                          </label>
-                      </div> -->
-                  </div>
-
-                  <button class="btn btn-default btn-sm btn-primary"><i class="fa fa-pencil"></i> Apply</button>
-
-              </form>
-
-          </div>
-      </div>
-
-      <div  class="panel panel-default sidebar-menu">
-
-          <div class="panel-heading">
-              <h3 class="panel-title">Size<a class="btn btn-xs btn-danger pull-right" href="#"><i class="fa fa-times-circle"></i> Clear</a></h3>
-          </div>
-
-          <div class="panel-body">
-              <form>
-                  <div class="form-group" *ngFor = "let s of size">
-                      <div class="checkbox">
-                          <label>
-                              <input type="checkbox"> {{s.sizeName}} (14)
-                          </label>
-                      </div>
-                  </div>
-
-                  <button class="btn btn-default btn-sm btn-primary"><i class="fa fa-pencil"></i> Apply</button>
-
-              </form>
-
-          </div>
-      </div>
-      <div class="panel panel-default sidebar-menu">
-
-            <div class="panel-heading">
-                <h3 class="panel-title">Colours <a class="btn btn-xs btn-danger pull-right" href="#"><i class="fa fa-times-circle"></i> Clear</a></h3>
-            </div>
-  
-            <div class="panel-body">
-  
-                <form>
-                    <div class="form-group">
-                        <div class="checkbox">
-                            <label>
-                                <input type="checkbox"> <span class="colour white"></span> White (14)
-                            </label>
-                        </div>
-                        <div class="checkbox">
-                            <label>
-                                <input type="checkbox"> <span class="colour blue"></span> Blue (10)
-                            </label>
-                        </div>
-                        <div class="checkbox">
-                            <label>
-                                <input type="checkbox"> <span class="colour green"></span> Green (20)
-                            </label>
-                        </div>
-                        <div class="checkbox">
-                            <label>
-                                <input type="checkbox"> <span class="colour yellow"></span> Yellow (13)
-                            </label>
-                        </div>
-                        <div class="checkbox">
-                            <label>
-                                <input type="checkbox"> <span class="colour red"></span> Red (10)
-                            </label>
-                        </div>
-                    </div>
-  
-                    <button class="btn btn-default btn-sm btn-primary"><i class="fa fa-pencil"></i> Apply</button>
-  
-                </form>
-  
             </div>
         </div>
-      <!-- *** MENUS AND FILTERS END *** -->
-
-      <div class="banner">
-          <a href="#">
-              <img src="../assets/img/banner.jpg" alt="sales 2014" class="img-responsive">
-          </a>
-      </div>
-  </div>
-
-  <div class="col-md-9">
-      <div class="box">
-          <h1>Ladies</h1>
-          <p>In our Ladies department we offer wide selection of the best products we have found and carefully selected worldwide.</p>
-      </div>
-
-      <div class="box info-bar">
-          <div class="row">
-              <div class="col-sm-12 col-md-4 products-showing">
-                  Showing <strong>12</strong> of <strong>25</strong> products
-              </div>
-
-              <div class="col-sm-12 col-md-8  products-number-sort">
-                  <div class="row">
-                      <form class="form-inline">
-                          <div class="col-md-6 col-sm-6">
-                              <div class="products-number">
-                                  <strong>Show</strong>  <a href="#" class="btn btn-default btn-sm btn-primary">12</a>  <a href="#" class="btn btn-default btn-sm">24</a>  <a href="#" class="btn btn-default btn-sm">All</a> products
-                              </div>
-                          </div>
-                          <div class="col-md-6 col-sm-6">
-                              <div class="products-sort-by">
-                                  <strong>Sort by</strong>
-                                  <select name="sort-by" class="form-control">
-                                      <option>Price</option>
-                                      <option>Name</option>
-                                      <option>Sales first</option>
-                                  </select>
-                              </div>
-                          </div>
-                      </form>
-                  </div>
-              </div>
-          </div>
-      </div>
-
-      <div class="row products">
-          <div class="col-md-4 col-sm-6" *ngFor = "let item of products">
-              <div class="product">
-                  <div class="flip-container">
-                      <div class="flipper">
-                          <div class="front">
-                              <a href="detail.html">
-                                  <img [src]="item.imageBase64" alt="" class="img-responsive">
-                              </a>
-                          </div>
-                          <div class="back">
-                              <a href="detail.html">
-                                  <img [src]="item.imageBase64" alt="" class="img-responsive">
-                              </a>
-                          </div>
-                      </div>
-                  </div>
-                  <a href="detail.html" class="invisible">
-                      <img [src]="item.imageBase64" alt="" class="img-responsive">
-                  </a>
-                  <div class="text">
-                      <h3><a href="detail.html">{{ item.name }}</a></h3>
-                      <p class="price">${{item.price}}</p>
-                      <p class="buttons">
-                          <a href="detail.html" class="btn btn-default">View detail</a>
-                          <a href="basket.html" class="btn btn-primary"><i class="fa fa-shopping-cart"></i>Add to cart</a>
-                      </p>
-                  </div>
-                  <!-- /.text -->
-              </div>
-              <!-- /.product -->
-          </div>
-          <!-- /.col-md-4 -->
-      </div>
-      <!-- /.products -->
-
-      <div class="pages">
-
-          <p class="loadMore">
-              <a href="#" class="btn btn-primary btn-lg"><i class="fa fa-chevron-down"></i> Load more</a>
-          </p>
-
-          <ul class="pagination">
-              <li><a href="#">«</a>
-              </li>
-              <li class="active"><a href="#">1</a>
-              </li>
-              <li><a href="#">2</a>
-              </li>
-              <li><a href="#">3</a>
-              </li>
-              <li><a href="#">4</a>
-              </li>
-              <li><a href="#">5</a>
-              </li>
-              <li><a href="#">»</a>
-              </li>
-          </ul>
-      </div>
 
 
-  </div>
-  <!-- /.col-md-9 -->
+        <div class="panel panel-default sidebar-menu">
+
+            <div class="panel-heading">
+                <h3 class="panel-title">Info<a class="btn btn-xs btn-danger pull-right" (click)="clear()">
+                        <i class="fa fa-times-circle"></i> Clear</a></h3>
+            </div>
+
+            <div class="panel-body">
+
+                <div class="form-group">
+                    <label for="lastname">Name</label>
+                    <input type="text" class="form-control" [(ngModel)]="searchItem.name" name="name">
+                </div>
+
+                <div class="form-group">
+                    <label for="lastname">Price From</label>
+                    <input type="text" class="form-control" [(ngModel)]="searchItem.priceFrom" name="priceFrom">
+                </div>
+                <div class="form-group">
+                    <label for="lastname">Price to</label>
+                    <input type="text" class="form-control" [(ngModel)]="searchItem.priceTo" name="priceTo">
+                </div>
+                <button class="btn btn-default btn-sm btn-primary" (click)="apply()"><i class="fa fa-pencil"></i> Apply</button>
+            </div>
+        </div>
+
+
+        <div class="panel panel-default sidebar-menu">
+
+            <div class="panel-heading">
+                <h3 class="panel-title">Brands <a class="btn btn-xs btn-danger pull-right" (click)="clear()">
+                        <i class="fa fa-times-circle"></i> Clear</a></h3>
+            </div>
+
+            <div class="panel-body">
+
+                <div class="form-group" *ngFor="let b of bands">
+                    <div class="checkbox">
+                        <label>
+                            <input type="radio" name="band" [(ngModel)]="searchItem.band" [value]="b.id">{{b.name}}
+                            (10)
+                        </label>
+                    </div>
+
+                </div>
+
+                <button class="btn btn-default btn-sm btn-primary" (click)="apply()"><i class="fa fa-pencil"></i> Apply</button>
+            </div>
+        </div>
+
+        <div class="panel panel-default sidebar-menu">
+
+            <div class="panel-heading">
+                <h3 class="panel-title">Size<a class="btn btn-xs btn-danger pull-right" (click)="clear()"><i class="fa fa-times-circle"></i>
+                        Clear</a></h3>
+            </div>
+
+            <div class="panel-body">
+                <div class="form-group" *ngFor="let s of size">
+                    <div class="checkbox">
+                        <label>
+                            <input type="radio" name="size" [(ngModel)]="searchItem.size" [value]="s.sizeValue">
+                            {{s.sizeName}} (14)
+                        </label>
+                    </div>
+                </div>
+
+                <button class="btn btn-default btn-sm btn-primary" (click)="apply()"><i class="fa fa-pencil"></i> Apply</button>
+
+            </div>
+        </div>
+        <div class="panel panel-default sidebar-menu">
+
+            <div class="panel-heading">
+                <h3 class="panel-title">Colours <a class="btn btn-xs btn-danger pull-right" (click)="clear()"><i class="fa fa-times-circle"></i>
+                        Clear</a></h3>
+            </div>
+
+            <div class="panel-body">
+                <div class="form-group" *ngFor="let c of color">
+                    <div class="checkbox">
+                        <label>
+                            <input type="radio" name="color" [(ngModel)]="searchItem.color" [value]="c.colorVlaue">
+                            <span class="colour white" [style.background]="c.colorVlaue"></span> {{c.colorName}} (14)
+                        </label>
+                    </div>
+
+                </div>
+
+                <button class="btn btn-default btn-sm btn-primary" (click)="apply()"><i class="fa fa-pencil"></i> Apply</button>
+
+            </div>
+        </div>
+        <!-- *** MENUS AND FILTERS END *** -->
+
+        <div class="banner">
+            <a href="#">
+                <img src="../assets/img/banner.jpg" alt="sales 2014" class="img-responsive">
+            </a>
+        </div>
+    </div>
+
+    <div class="col-md-9">
+        <div class="box">
+            <h1>Ladies</h1>
+            <p>In our Ladies department we offer wide selection of the best products we have found and carefully
+                selected worldwide.</p>
+        </div>
+
+        <div class="box info-bar">
+            <div class="row">
+                <div class="col-sm-12 col-md-4 products-showing">
+                    Showing <strong>12</strong> of <strong>25</strong> products
+                </div>
+
+                <div class="col-sm-12 col-md-8  products-number-sort">
+                    <div class="row">
+                        <form class="form-inline">
+                            <div class="col-md-6 col-sm-6">
+                                <div class="products-number">
+                                    <strong>Show</strong> <a href="#" class="btn btn-default btn-sm btn-primary">12</a>
+                                    <a href="#" class="btn btn-default btn-sm">24</a> <a href="#" class="btn btn-default btn-sm">All</a>
+                                    products
+                                </div>
+                            </div>
+                            <div class="col-md-6 col-sm-6">
+                                <div class="products-sort-by">
+                                    <strong>Sort by</strong>
+                                    <select name="sort-by" class="form-control">
+                                        <option>Price</option>
+                                        <option>Name</option>
+                                        <option>Sales first</option>
+                                    </select>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="row products">
+            <div class="col-md-4 col-sm-6" *ngFor="let item of products">
+                <div class="product">
+                    <div class="flip-container">
+                        <div class="flipper">
+                            <div class="front">
+                                <a href="detail.html">
+                                    <img [src]="item.imageBase64" alt="" class="img-responsive">
+                                </a>
+                            </div>
+                            <div class="back">
+                                <a href="detail.html">
+                                    <img [src]="item.imageBase64" alt="" class="img-responsive">
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <a href="detail.html" class="invisible">
+                        <img [src]="item.imageBase64" alt="" class="img-responsive">
+                    </a>
+                    <div class="text">
+                        <h3><a href="detail.html">{{ item.name }}</a></h3>
+                        <p class="price">${{item.price}}</p>
+                        <p class="buttons">
+                            <a href="detail.html" class="btn btn-default">View detail</a>
+                            <a href="basket.html" class="btn btn-primary"><i class="fa fa-shopping-cart"></i>Add to
+                                cart</a>
+                        </p>
+                    </div>
+                    <!-- /.text -->
+                </div>
+                <!-- /.product -->
+            </div>
+            <!-- /.col-md-4 -->
+        </div>
+        <!-- /.products -->
+
+        <div class="pages">
+
+            <p class="loadMore">
+                <a href="#" class="btn btn-primary btn-lg"><i class="fa fa-chevron-down"></i> Load more</a>
+            </p>
+
+            <ul class="pagination">
+                <li><a href="#">«</a>
+                </li>
+                <li class="active"><a href="#">1</a>
+                </li>
+                <li><a href="#">2</a>
+                </li>
+                <li><a href="#">3</a>
+                </li>
+                <li><a href="#">4</a>
+                </li>
+                <li><a href="#">5</a>
+                </li>
+                <li><a href="#">»</a>
+                </li>
+            </ul>
+        </div>
+
+
+    </div>
+    <!-- /.col-md-9 -->
 </div>
 <!-- /.container -->
