--- a/eshopView/my-app/src/app/home/home.component.html
+++ b/eshopView/my-app/src/app/home/home.component.html
@@ -232,7 +232,7 @@ _________________________________________________________ -->
                         <p class="price">${{item.price}}</p>
                         <p class="buttons">
                             <a href="detail.html" class="btn btn-default">View detail</a>
-                            <a href="basket.html" class="btn btn-primary"><i class="fa fa-shopping-cart"></i>Add to
+                            <a (click)="addCart(item)" class="btn btn-primary"><i class="fa fa-shopping-cart"></i>Add to
                                 cart</a>
                         </p>
                     </div>
