--- a/eshopView/my-app/src/app/app.component.html
+++ b/eshopView/my-app/src/app/app.component.html
@@ -271,6 +271,7 @@
         <a routerLink="/cart" routerLinkActive="active" class="btn btn-primary navbar-btn"><i class="fa fa-shopping-cart"></i><span class="hidden-sm">3
             items in cart</span></a>
       </div>
+
       <!--/.nav-collapse -->
 
       <div class="navbar-collapse collapse right" id="search-not-mobile">
@@ -279,7 +280,11 @@
           <i class="fa fa-search"></i>
         </button>
       </div>
-
+      <div class="navbar-collapse collapse right" >
+        <a routerLink="/account" type="button" class="btn navbar-btn btn-primary">
+          Account
+        </a>
+      </div>
     </div>
 
     <div class="collapse clearfix" id="search">
