--- a/eshopView/my-app/src/app/cart/cart.component.html
+++ b/eshopView/my-app/src/app/cart/cart.component.html
@@ -23,50 +23,37 @@
                 <th colspan="2">Product</th>
                 <th>Quantity</th>
                 <th>Unit price</th>
-                <th>Discount</th>
+                <th>Attri</th>
                 <th colspan="2">Total</th>
               </tr>
             </thead>
             <tbody>
-              <tr>
+              <tr *ngFor="let item of product" >
                 <td>
-                  <a href="#">
-                    <img src="../assets/img/detailsquare.jpg" alt="White Blouse Armani">
+                  <a>
+                    <img src="http://localhost:58837/upload/{{item.imgName}}" alt="White Blouse Armani">
                   </a>
                 </td>
-                <td><a href="#">White Blouse Armani</a>
+                <td><a>{{item.name}}</a>
                 </td>
                 <td>
-                  <input type="number" value="2" class="form-control">
+                  <input type="number" min="1" [(ngModel)] ="item.quantity" [name]="item.quantity"  [value]="item.quantity" class="form-control">
                 </td>
-                <td>$123.00</td>
-                <td>$0.00</td>
-                <td>$246.00</td>
-                <td><a href="#"><i class="fa fa-trash-o"></i></a>
-                </td>
-              </tr>
-              <tr>
+                <td>${{item.price}}</td>
                 <td>
-                  <a href="#">
-                    <img src="../assets/img/basketsquare.jpg" alt="Black Blouse Armani">
-                  </a>
+                  <p style="margin:0" *ngFor ="let itemChil of item.productChilViews">
+                    <label>{{itemChil.sizeName +"-"+itemChil.colorName}}</label>
+                  </p>
                 </td>
-                <td><a href="#">Black Blouse Armani</a>
-                </td>
-                <td>
-                  <input type="number" value="1" class="form-control">
-                </td>
-                <td>$200.00</td>
-                <td>$0.00</td>
-                <td>$200.00</td>
-                <td><a href="#"><i class="fa fa-trash-o"></i></a>
+                <td>${{item.quantity*item.price}}</td>
+                <td><a (click)="delete(item.id)"><i class="fa fa-trash-o"></i></a>
                 </td>
               </tr>
             </tbody>
             <tfoot>
               <tr>
                 <th colspan="5">Total</th>
-                <th colspan="2">$446.00</th>
+                <th colspan="2">${{total()}}</th>
               </tr>
             </tfoot>
           </table>
@@ -79,9 +66,9 @@
             <a href="category.html" class="btn btn-default"><i class="fa fa-chevron-left"></i> Continue shopping</a>
           </div>
           <div class="pull-right">
-            <button class="btn btn-default"><i class="fa fa-refresh"></i> Update basket</button>
-            <button type="submit" class="btn btn-primary">Proceed to checkout <i class="fa fa-chevron-right"></i>
-            </button>
+            <button (click)="update()"  class="btn btn-default"><i class="fa fa-refresh"></i> Update basket</button>
+            <a routerLink="/checkout" class="btn btn-primary">Proceed to checkout <i class="fa fa-chevron-right"></i>
+            </a>
           </div>
         </div>
 
@@ -199,11 +186,11 @@
           <tbody>
             <tr>
               <td>Order subtotal</td>
-              <th>$446.00</th>
+              <th>${{total()}}</th>
             </tr>
             <tr>
               <td>Shipping and handling</td>
-              <th>$10.00</th>
+              <th>$0.0</th>
             </tr>
             <tr>
               <td>Tax</td>
@@ -211,7 +198,7 @@
             </tr>
             <tr class="total">
               <td>Total</td>
-              <th>$456.00</th>
+              <th>${{total()}}</th>
             </tr>
           </tbody>
         </table>
