--- a/eshopView/my-app/src/app/history/history.component.html
+++ b/eshopView/my-app/src/app/history/history.component.html
@@ -23,6 +23,7 @@
                 <th>Date</th>
                 <th>payMethod</th>
                 <th>Address</th>
+                <th>Benefit</th>
                 <th>Total</th>
                 <th></th>
               </tr>
@@ -31,9 +32,10 @@
               <tr *ngFor="let order of orders">
                 <td>{{order.id}}</td>
                 <td>{{order.username}}</td>
-                <td>{{order.date | date}}</td>
+                <td>{{order.paydate | date}}</td>
                 <td>{{order.paymethod==0 ? 'ship':'not ship'}}</td>
                 <td>{{order.address}}</td>
+                <td>{{order.benefit}}</td>
                 <td>{{order.total}}</td>
                 <td><a routerLink="/history/{{order.id}}">Detail</a></td>
               </tr>
